--- a/index.html
+++ b/index.html
@@ -18,15 +18,13 @@
 
         body {
             min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
             background: #1a3c34; /* Fallback color */
+            overflow: auto; /* Enable scrolling */
+            margin: 0; /* Remove default margin */
         }
 
         .background {
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
@@ -46,15 +44,10 @@
             position: absolute;
             top: 20px;
             left: 20px;
-            font-size: 1.8rem;
-            font-weight: 700;
-            color: #fff;
-            z-index: 1;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            text-shadow: 0 0 8px rgba(255, 255, 255, 0.7);
+            max-width: 150px; /* Larger for desktop */
+            height: auto;
+            z-index: 2;
             animation: logoPulse 2s infinite ease-in-out;
-            width: 150px;
         }
 
         @keyframes logoPulse {
@@ -65,8 +58,10 @@
         .container {
             text-align: center;
             color: white;
-            padding: 20px;
+            padding: 30px;
+            margin-top: 50px; /* Adjusted margin-top for spacing */
             animation: fadeIn 1.5s ease-in-out;
+            width: 100%;
         }
 
         @keyframes fadeIn {
@@ -75,9 +70,9 @@
         }
 
         h1 {
-            font-size: 3.8rem;
+            font-size: 4rem;
             font-weight: 700;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
             text-transform: uppercase;
             letter-spacing: 3px;
             text-shadow: 0 0 12px rgba(255, 255, 255, 0.6);
@@ -88,23 +83,31 @@
         }
 
         .tagline {
-            font-size: 1.4rem;
+            font-size: 1.6rem;
             font-weight: 300;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             opacity: 0.9;
             color: #B0E0E6;
+        }
+
+        h5 {
+            font-size: 1.4rem;
+            font-weight: 500;
+            margin-bottom: 30px;
+            color: #fff;
         }
 
         .countdown {
             display: flex;
             justify-content: center;
-            gap: 20px;
+            gap: 15px;
             margin-bottom: 40px;
+            flex-wrap: nowrap; /* Single row on all screens */
         }
 
         .countdown div {
             background: rgba(255, 255, 255, 0.15);
-            padding: 25px;
+            padding: 20px;
             border-radius: 12px;
             min-width: 90px;
             backdrop-filter: blur(8px);
@@ -115,7 +118,7 @@
 
         .countdown span {
             display: block;
-            font-size: 2.2rem;
+            font-size: 2.5rem;
             font-weight: 700;
             color: #B0E0E6;
             animation: flip 1s ease-in-out;
@@ -127,7 +130,7 @@
         }
 
         .countdown label {
-            font-size: 0.95rem;
+            font-size: 1rem;
             text-transform: uppercase;
             opacity: 0.8;
             color: #fff;
@@ -137,17 +140,17 @@
             display: flex;
             justify-content: center;
             gap: 20px;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
         }
 
         .whatsapp-button, .call-button {
             display: inline-flex;
             align-items: center;
-            padding: 15px 35px;
+            padding: 15px 40px;
             color: white;
             text-decoration: none;
             border-radius: 8px;
-            font-size: 1.2rem;
+            font-size: 1.3rem;
             font-weight: 500;
             transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
         }
@@ -173,9 +176,9 @@
         }
 
         .whatsapp-button img, .call-button i {
-            width: 24px;
-            height: 24px;
-            margin-right: 10px;
+            width: 28px;
+            height: 28px;
+            margin-right: 12px;
         }
 
         .call-button i {
@@ -187,13 +190,14 @@
             justify-content: center;
             gap: 20px;
             margin-top: 20px;
+            z-index: 1; /* Ensure visibility above background */
         }
 
         .social-media a {
             color: #fff;
-            font-size: 1.5rem;
-            width: 50px;
-            height: 50px;
+            font-size: 2rem;
+            width: 60px;
+            height: 60px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -208,7 +212,39 @@
             background: rgba(255, 255, 255, 0.4);
         }
 
-        /* Bootstrap Responsive Adjustments */
+        /* Responsive Adjustments */
+        @media (min-width: 992px) {
+            .container {
+                padding: 40px;
+                max-width: 1200px; /* Wider container for desktop */
+            }
+
+            h1 {
+                font-size: 4.5rem;
+            }
+
+            .tagline {
+                font-size: 1.8rem;
+            }
+
+            h5 {
+                font-size: 1.5rem;
+            }
+
+            .countdown div {
+                min-width: 100px;
+                padding: 25px;
+            }
+
+            .countdown span {
+                font-size: 2.8rem;
+            }
+
+            .countdown label {
+                font-size: 1.1rem;
+            }
+        }
+
         @media (max-width: 767.98px) {
             h1 {
                 font-size: 2.5rem;
@@ -218,44 +254,61 @@
                 font-size: 1.1rem;
             }
 
+            h5 {
+                font-size: 1rem;
+            }
+
             .countdown {
-                flex-wrap: wrap;
-                gap: 15px;
+                gap: 8px;
             }
 
             .countdown div {
-                min-width: 70px;
-                padding: 15px;
+                min-width: 60px;
+                padding: 12px;
             }
 
             .countdown span {
-                font-size: 1.8rem;
+                font-size: 1.6rem;
             }
 
             .logo {
-                font-size: 1.4rem;
+                max-width: 120px;
                 top: 15px;
                 left: 15px;
             }
 
             .button-container {
-                flex-wrap: wrap;
+                flex-direction: column;
                 gap: 15px;
+                align-items: center;
             }
 
             .whatsapp-button, .call-button {
                 font-size: 1.1rem;
                 padding: 12px 30px;
+                width: 100%;
+                max-width: 250px;
+                justify-content: center;
+            }
+
+            .social-media {
+                gap: 12px;
+                padding-bottom: 20px;
             }
 
             .social-media a {
-                width: 40px;
-                height: 40px;
-                font-size: 1.2rem;
+                width: 45px;
+                height: 45px;
+                font-size: 1.5rem;
             }
         }
 
         @media (max-width: 576px) {
+            .container {
+                margin-top: 40px; /* Reduced margin-top for mobile */
+                padding: 15px;
+            }
+
             h1 {
                 font-size: 2rem;
             }
@@ -264,13 +317,17 @@
                 font-size: 0.9rem;
             }
 
+            h5 {
+                font-size: 0.85rem;
+            }
+
             .countdown div {
-                min-width: 60px;
+                min-width: 50px;
                 padding: 10px;
             }
 
             .countdown span {
-                font-size: 1.5rem;
+                font-size: 1.4rem;
             }
 
             .countdown label {
@@ -278,18 +335,60 @@
             }
 
             .logo {
-                font-size: 1.2rem;
+                max-width: 50px;
+                top: 10px;
+                left: 10px;
             }
 
             .whatsapp-button, .call-button {
-                font-size: 1rem;
+                font-size: 13px;
                 padding: 10px 25px;
+            }
+
+            .social-media a {
+                width: 40px;
+                height: 40px;
+                font-size: 1.3rem;
+            }
+            .container{
+                margin-top: 43px;
+            }
+        }
+
+        @media (max-width: 400px) {
+            h1 {
+                font-size: 1.8rem;
+            }
+
+            .tagline {
+                font-size: 0.8rem;
+            }
+
+            h5 {
+                font-size: 0.75rem;
+            }
+
+            .countdown div {
+                min-width: 45px;
+                padding: 8px;
+            }
+
+            .countdown span {
+                font-size: 1.2rem;
+            }
+
+            .countdown label {
+                font-size: 0.7rem;
+            }
+
+            .logo {
+                max-width: 80px;
             }
 
             .social-media a {
                 width: 35px;
                 height: 35px;
-                font-size: 1rem;
+                font-size: 1.1rem;
             }
         }
     </style>
@@ -301,28 +400,27 @@
             Your browser does not support the video tag.
         </video>
     </div>
-    <!-- <span class="logo">Mittal's Physiofit</span> -->
     <img src="./assets/Logo.webp" alt="Physiotherapy Logo" class="logo">
-    <div class="container mt-4">
+    <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-10 col-lg-8 text-center">
                 <h1>Mittal's Physiofit</h1>
                 <p class="tagline">A Hub of Rehabilitation & Fitness</p>
                 <h5>Our website is launching soon!🚀</h5>
-                <div class="countdown d-flex justify-content-center flex-wrap" id="countdown">
-                    <div class="m-2">
+                <div class="countdown d-flex justify-content-center flex-nowrap" id="countdown">
+                    <div class="m-1">
                         <span id="days">00</span>
                         <label>Days</label>
                     </div>
-                    <div class="m-2">
+                    <div class="m-1">
                         <span id="hours">00</span>
                         <label>Hours</label>
                     </div>
-                    <div class="m-2">
+                    <div class="m-1">
                         <span id="minutes">00</span>
                         <label>Minutes</label>
                     </div>
-                    <div class="m-2">
+                    <div class="m-1">
                         <span id="seconds">00</span>
                         <label>Seconds</label>
                     </div>
@@ -332,10 +430,10 @@
                         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp Icon"> Connect on WhatsApp
                     </a>
                     <a href="tel:+918970227764" class="call-button">
-                        <i class="fa-solid fa-phone"></i> Call Us
+                        <i class="fa-solid fa-phone"></i> <span>Call Us</span>
                     </a>
                 </div>
-                <div class="social-media d-flex justify-content-center">
+                <div class="social-media d-flex justify-content-center flex-wrap">
                     <a href="https://www.youtube.com/@MMC-Allmedicalsubjects" target="_blank" title="YouTube">
                         <i class="fab fa-youtube"></i>
                     </a>
@@ -345,7 +443,7 @@
                     <a href="https://facebook.com/mittal.sachendra891" target="_blank" title="Facebook">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=co.brown.jigls" target="_blank" title="Twitter">
+                    <a href="https://play.google.com/store/apps/details?id=co.brown.jigls" target="_blank" title="Google Play">
                         <i class="fa-brands fa-google-play"></i>
                     </a>
                 </div>
