--- a/gallery.html
+++ b/gallery.html
@@ -3,19 +3,20 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us - Mittal's Physiofit</title>
-    <!-- Bootstrap CSS -->
-   <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Image Gallery</title>
+     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&amp;display=swap"
         rel="stylesheet" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
     <link rel="stylesheet" href="style.css">
+
 </head>
 
-<body class="text-dark">
+<body class="bg-light">
     <header class="bg-white shadow-sm">
         <div style="background-color: #153C33;">
             <div class="container py-2">
@@ -94,69 +95,56 @@
             </nav>
         </div>
     </header>
+    <main>
+        <section class="bg-light py-5 position-relative">
+            <div class="container px-4 text-center">
+                <h1 class="display-4 fw-bold text-dark">Gallery</h1>
+                <!-- <p class="mt-3 text-secondary lead col-md-8 mx-auto">We're Here To Help - Simply Share Your Details, And
+                    Our Team Will Confirm Your Appointment Shortly.</p> -->
+            </div>
+        </section>
 
-    <section class="bg-light py-5 position-relative">
-        <div class="container px-4 text-center">
-            <h1 class="display-4 fw-bold text-teal-dark mb-3">Request a Callback</h1>
-            <p class="lead text-muted">We're Just A Call Away - Simply Share Your Details, And Our Team Will Reach Out
-                To Assist You.</p>
+        <div class="container py-5">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <!-- Loop through 39 items -->
+                <script>
+                    const fileExtensions = ['jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'jpg', 'mp4', 'mp4'];
+                    for (let i = 1; i <= 39; i++) {
+                        const ext = fileExtensions[i - 1] || 'jpg'; // Default to jpg if no extension specified
+                        const isVideo = ext === 'mp4';
+                        const filePath = `assets/image/gallery/${i}.${ext}`;
+                        const thumbnailPath = isVideo ? `assets/image/gallery/${i}.jpg` : filePath; // Use jpg thumbnail for videos
+                        document.write(`
+                            <div class="col">
+                                <div class="card h-100 border-0 shadow-sm">
+                                    ${isVideo ?
+                                `<video src="${filePath}" class="gallery-video card-img-top" muted playsinline alt="Gallery Video ${i}" data-bs-toggle="modal" data-bs-target="#mediaModal" data-media-src="${filePath}" data-media-type="video"></video>` :
+                                `<img src="${filePath}" class="gallery-img card-img-top" alt="Gallery Image ${i}" data-bs-toggle="modal" data-bs-target="#mediaModal" data-media-src="${filePath}" data-media-type="image">`
+                            }
+                                </div>
+                            </div>
+                        `);
+                    }
+                </script>
+            </div>
         </div>
-        <div class="position-absolute top-50 end-25 translate-middle-y w-20 h-20 bg-dark rounded-circle opacity-10">
-        </div>
-    </section>
 
-
-    <main class="py-5">
-        <div class="container px-4">
-            <div class="card mx-auto shadow-lg" style="max-width: 32rem;">
-                <div class="card-body p-4 p-md-5">
-                    <h2 class="h3 fw-bold text-center text-teal-dark mb-2">Request Callback</h2>
-                    <p class="text-center text-muted mb-4">Please Fill The Form</p>
-                    <form action="https://api.web3forms.com/submit" method="POST">
-                        <input type="hidden" name="access_key" value="f66d53c0-0421-4100-ab8d-c77c25b35e02">
-                        <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
-                        <div class="mb-3 position-relative">
-                            <span
-                                class="material-icons position-absolute top-50 start-0 translate-middle-y ms-3 text-muted">person</span>
-                            <input class="form-control ps-5" placeholder="Name" type="text" name="name" required />
-                        </div>
-                        <div class="mb-3 position-relative">
-                            <span
-                                class="material-icons position-absolute top-50 start-0 translate-middle-y ms-3 text-muted">phone_iphone</span>
-                            <input class="form-control ps-5" placeholder="Mobile No." type="tel" name="phone"
-                                required />
-                        </div>
-                        <div class="mb-3 position-relative">
-                            <span
-                                class="material-icons position-absolute top-50 start-0 translate-middle-y ms-3 text-muted">email</span>
-                            <input class="form-control ps-5" placeholder="Email" type="email" name="email" required />
-                        </div>
-                        <div class="mb-3 position-relative">
-                            <span
-                                class="material-icons position-absolute top-50 start-0 translate-middle-y ms-3 text-muted">rate_review</span>
-                            <textarea class="form-control ps-5" placeholder="Remark" rows="5" name="message"
-                                required></textarea>
-                        </div>
-                        <div class="mb-4 d-flex align-items-start">
-                            <input class="form-check-input mt-1 me-2" id="privacy" type="checkbox"
-                                name="privacy_agreement" />
-                            <label class="form-check-label text-muted small" for="privacy">I agree to the privacy policy
-                                and understand that my information will be kept secure and confidential.</label>
-                        </div>
-                        <div class="text-center">
-                            <button
-                                class="btn btn-teal text-white px-4 py-2 rounded-pill d-flex align-items-center justify-content-center mx-auto"
-                                type="submit">
-                                Submit <span class="material-icons ms-2">arrow_forward</span>
-                            </button>
-                        </div>
-                    </form>
+        <!-- Modal -->
+        <div class="modal fade" id="mediaModal" tabindex="-1" aria-labelledby="mediaModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="mediaModalLabel">Media Preview</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div id="modalContent"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
-
-   <footer class="bg-dark text-white">
+      <footer class="bg-dark text-white">
         <div class="container py-5">
             <div class="row gy-4">
                 <div class="col-md-3">
@@ -210,10 +198,29 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <script>
+        // Update modal content based on media type
+        document.querySelectorAll('.gallery-img, .gallery-video').forEach(media => {
+            media.addEventListener('click', function () {
+                const mediaSrc = this.getAttribute('data-media-src');
+                const mediaType = this.getAttribute('data-media-type');
+                const modalContent = document.getElementById('modalContent');
 
-    <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+                if (mediaType === 'video') {
+                    modalContent.innerHTML = `
+                        <video src="${mediaSrc}" class="img-fluid w-100" controls autoplay muted playsinline alt="Modal Video"></video>
+                    `;
+                } else {
+                    modalContent.innerHTML = `
+                        <img src="${mediaSrc}" class="img-fluid w-100" alt="Modal Image">
+                    `;
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
