--- a/about.html
+++ b/about.html
@@ -5,6 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us - Mittal's Physiofit</title>
+
+    <!-- ✅ Website description -->
+    <meta name="description"
+        content="Mittal's Physiofit offers expert physiotherapy services including advanced physiotherapy, sports rehab, neuro care, prenatal and postnatal rehabilitation, geriatric care, and more in Jaipur." />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/fevicon/favicon-16x16.png" />
     <!-- Bootstrap CSS -->
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet" />
@@ -288,6 +295,17 @@
                 </div>
             </div>
         </section>
+
+        <!-- Sticky Call and WhatsApp Icons -->
+        <div class="sticky-icons">
+            <a href="tel:+919610164989" class="call-icon" title="Call Now">
+                <i class="fas fa-phone-alt"></i>
+            </a>
+            <a href="https://api.whatsapp.com/send?phone=9189702 27764&text=Hello%20Mittal's%20Physiofit,%20I%20would%20like%20to%20book%20an%20appointment."
+                target="_blank" class="whatsapp-icon" title="Message on WhatsApp">
+                <i class="fab fa-whatsapp"></i>
+            </a>
+        </div>
 
         <footer class="bg-dark text-white">
             <div class="container py-5">
