--- a/bookappoitment.html
+++ b/bookappoitment.html
@@ -5,6 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us - Mittal's Physiofit</title>
+
+    <!-- ✅ Website description -->
+    <meta name="description"
+        content="Mittal's Physiofit offers expert physiotherapy services including advanced physiotherapy, sports rehab, neuro care, prenatal and postnatal rehabilitation, geriatric care, and more in Jaipur." />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/fevicon/favicon-16x16.png" />
     <!-- Bootstrap CSS -->
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet" />
@@ -13,6 +20,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
+    <style>
+
+    </style>
 </head>
 
 <body class="text-dark">
@@ -65,15 +75,10 @@
                         <ul class="navbar-nav">
                             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                             <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
-                            <!-- <li class="nav-item" onclick="scrollToSection('Services')"><a class="nav-link"
-                                    href="#">Services</a></li> -->
                             <li class="nav-item">
                                 <a class="nav-link" href="index.html#Services">Services</a>
                             </li>
                             <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
-
-                            <!-- <li class="nav-item" onclick="scrollToSection('Contact-us')"><a class="nav-link"
-                                    href="#">Contact Us</a></li> -->
                             <li class="nav-item">
                                 <a class="nav-link" href="index.html#Contact-us">Contact Us</a>
                             </li>
@@ -210,6 +215,16 @@
         </section>
     </main>
 
+    <!-- Sticky Call and WhatsApp Icons -->
+    <div class="sticky-icons">
+        <a href="tel:+919610164989" class="call-icon" title="Call Now">
+            <i class="fas fa-phone-alt"></i>
+        </a>
+        <a href="https://api.whatsapp.com/send?phone=9189702 27764&text=Hello%20Mittal's%20Physiofit,%20I%20would%20like%20to%20book%20an%20appointment." target="_blank" class="whatsapp-icon" title="Message on WhatsApp">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    </div>
+
     <footer class="bg-dark text-white">
         <div class="container py-5">
             <div class="row gy-4">
@@ -230,7 +245,6 @@
                         <li class="nav-item mt-2">
                             <a class="nav-link" href="index.html#Contact-us">Contact Us</a>
                         </li>
-
                     </ul>
                 </div>
                 <div class="col-md-3">
@@ -264,7 +278,6 @@
             </div>
         </div>
     </footer>
-
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
