--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 </head>
 
 <body class="text-dark">
-       <header class="bg-white shadow-sm">
+      <header class="bg-white shadow-sm">
         <div style="background-color: #153C33;">
             <div class="container py-2">
                 <div class="d-flex justify-content-between align-items-center small text-white">
@@ -77,6 +77,7 @@
                                 <a class="nav-link" href="index.html#Services">Services</a>
                             </li>
                             <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
+                            <li class="nav-item"><a href="index.html#Blog" class="nav-link">Blog</a></li>
 
 
                             <li class="nav-item">
@@ -89,13 +90,25 @@
                                     Download
                                 </a>
                                 <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-                                    <li><a class="dropdown-item" target="_blank"
+                                    <li>
+                                        <a class="dropdown-item" target="_blank"
                                             href="https://drive.google.com/file/d/1bRkVtug0i-sa3-pBaxMUQ1kaseH0frIm/view">Back
-                                            Exercises</a></li>
-                                    <li><a class="dropdown-item" target="_blank"
-                                            href="https://drive.google.com/file/d/1OPLa2aA34frS29iF_K0gipodr90QXBYB/view">Neck
-                                            and Knee
-                                        </a></li>
+                                            Exercises</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" target="_blank"
+                                            href="https://drive.google.com/file/d/1sIbLBACU2V6O8OFlFiyEIR5uUG358jnc/view">Neck
+                                            Exercises
+
+                                        </a>
+                                    </li>
+                                     <li>
+                                        <a class="dropdown-item" target="_blank"
+                                            href="https://drive.google.com/file/d/1_cJpgXcXPz-uI14LogtJX-PeoLINMnXx/view">Knee
+                                            Exercises
+
+                                        </a>
+                                    </li>
                                 </ul>
                             </li>
 
@@ -154,7 +167,7 @@
                     </h6>
 
                     <p class="text-muted mt-3">Established in 2019, Mittal’s Physiofit stands as a trusted center
-                        for holistic healing and physical wellness. Founded by Dr. Leena and Dr. Sachendra Mittal,
+                        for holistic healing and physical wellness. Founded by <strong>Dr. Leena </strong>  and  <strong> Sachendra Mittal, </strong>
                         the clinic is the realization of their two decades of dedication to the science of
                         physiotherapy and the art of compassionate care.
                     </p>
@@ -211,37 +224,37 @@
                             <h2 class="h4 fw-bold text-dark mb-3">About Me</h2>
                             <p class="text-muted">
                                 Dr. Leena Mittal is a dynamic and compassionate neuro-physiotherapist, co-founder of
-                                Mittal’s Physiofit, and a highly respected figure in the field of Neurological
-                                Rehabilitation. With over 15 years of clinical experience, she specializes in treating a
+                                <strong>Mittal’s Physiofit,</strong>  and a highly respected figure in the field of <strong>Neurological
+                                Rehabilitation.</strong>  With over <strong>15 years of clinical experience,</strong>  she specializes in treating a
                                 wide spectrum of neurological conditions, including stroke, cerebral palsy, spinal cord
                                 injuries, Parkinson’s disease, and other neuro-motor disorders.
                             </p>
                             <p class="text-muted">
                                 Her academic and professional journey is marked by a deep commitment to continuous
                                 learning
-                                and integrative care. She is CNDT (Certified Neuro-Developmental Therapist) and holds
-                                multiple certifications that enhance her holistic approach — including Aerobic & Power
+                                and integrative care. She is <strong> CNDT (Certified Neuro-Developmental Therapist)</strong> and holds
+                                multiple certifications that enhance her holistic approach — including <strong>Aerobic & Power
                                 Yoga
-                                training and Maternal Health Care under IAFT. These additional qualifications enable her
+                                training and Maternal Health Care</strong>  under <strong>IAFT.</strong>  These additional qualifications enable her
                                 to
                                 blend conventional neurorehabilitation with wellness practices that improve overall
                                 quality
                                 of life, especially for women during pre- and postnatal phases.
                             </p>
                             <p class="text-muted">
-                                Dr. Leena is a firm believer in patient-centred care, where emotional support and
+                                Dr. Leena is a firm believer in <strong> patient-centred care,</strong> where emotional support and
                                 motivational counselling go hand-in-hand with evidence-based therapy. Her sessions are
                                 thoughtfully crafted to restore confidence, mobility, and independence in her patients —
                                 often becoming a transformative journey for them and their families.
                             </p>
                             <p class="text-muted">
-                                She is also an active life member of MIAP (Indian Association of Physiotherapists) and
+                                She is also an active <strong> life member of MIAP (Indian Association of Physiotherapists) and
                                 MIAFT
-                                (Indian Association of Fitness Trainers), reflecting her dedication to professional
+                                (Indian Association of Fitness Trainers), </strong> reflecting her dedication to professional
                                 excellence and ethical practice.
                             </p>
                             <p class="text-muted">
-                                As the Chief Consultant at Mittal’s Physiofit, she plays a pivotal role in mentoring
+                                As the <strong> Chief Consultant at Mittal’s Physiofit, </strong> she plays a pivotal role in mentoring
                                 junior
                                 therapists, developing rehabilitation protocols, and ensuring every patient experiences
                                 healing with empathy, expertise, and encouragement.
@@ -272,9 +285,9 @@
                         <div class="card shadow p-4">
                             <h2 class="h4 fw-bold text-dark mb-3">About Me</h2>
                             <p class="text-muted">
-                                Dr. Sachendra Mittal is the visionary founder and driving force behind Mittal’s
-                                Physiofit,
-                                combining over 20 years of medical experience with a passion for patient-centred care. A
+                                Dr. Sachendra Mittal is the visionary founder and driving force behind <strong> Mittal’s
+                                Physiofit, </strong>
+                                combining over <strong> 20 years of medical experience </strong> with a passion for patient-centred care. A
                                 highly respected academician and healthcare leader, Dr. Mittal holds advanced
                                 qualifications
                                 in Anatomy and Hospital Administration, giving him a unique perspective on both the
@@ -282,12 +295,12 @@
                                 of the human body and the systems that support healing.
                             </p>
                             <p class="text-muted">
-                                His deep-rooted belief in integrative, empathetic, and evidence-based rehabilitation led
+                                His deep-rooted belief in <strong> integrative, empathetic, and evidence-based rehabilitation </strong> led
                                 to
                                 the establishment of Mittal’s Physiofit in 2019. Since then, the clinic has become a
                                 trusted
                                 name in physiotherapy and rehabilitation in Jaipur and beyond. Under his leadership, the
-                                clinic emphasizes not just treatment, but transformative healing — where each patient is
+                                clinic emphasizes not just treatment, but <strong>transformative healing — </strong>  where each patient is
                                 treated with compassion, respect, and clinical precision.
                             </p>
                             <p class="text-muted">
@@ -299,7 +312,7 @@
                             <p class="text-muted">
                                 With his commitment to excellence and innovation, Dr. Sachendra Mittal continues to lead
                                 the
-                                Mittal’s Physiofit team in delivering holistic wellness solutions that empower patients
+                                Mittal’s Physiofit team in delivering <strong>holistic wellness solutions </strong>  that empower patients
                                 to
                                 regain movement, independence, and quality of life.
                             </p>
@@ -320,60 +333,72 @@
             </a>
         </div>
 
-        <footer class="bg-dark text-white">
-            <div class="container py-5">
-                <div class="row gy-4">
-                    <div class="col-md-3">
-                        <img alt="CB Physiotherapy white logo text-white" class="mb-4" src="./assets/image/Logo.webp"
-                            style="height: 48px" />
-                        <p class="text-secondary">A Hub of Rehabilitation & Fitness</p>
-                    </div>
-                    <div class="col-md-3">
-                        <h4 class="fw-semibold fs-5 mb-4">Quick Links</h4>
-                        <ul class="list-unstyled">
-                            <li class="mb-2"><a class="nav-link text-decoration-none" href="index.html">Home</a></li>
-                            <li class="mb-2"><a class="nav-link text-decoration-none" href="about.html">About Us</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="index.html#Services">Services</a>
-                            </li>
-                            <li class="nav-item mt-2">
-                                <a class="nav-link" href="index.html#Contact-us">Contact Us</a>
-                            </li>
+       <footer class="bg-dark text-white">
+        <div class="container py-5">
+            <div class="row gy-4">
+                <div class="col-md-3">
+                    <img alt="CB Physiotherapy white logo text-white" class="mb-4" src="./assets/image/Logo.webp"
+                        style="height: 48px" />
+                    <p class="text-secondary">A Hub of Rehabilitation & Fitness</p>
+                </div>
+                <div class="col-md-3">
+                    <h4 class="fw-semibold fs-5 mb-4">Quick Links</h4>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="index.html">Home</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="about.html">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html#Services">Services</a>
+                        </li>
+                        <li class="nav-item mt-2">
+                            <a class="nav-link" href="index.html#Contact-us">Contact Us</a>
+                        </li>
 
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4 class="fw-semibold fs-5 mb-4">More Services</h4>
-                        <ul class="list-unstyled">
-                            <li class="mb-2"><a class="nav-link text-decoration-none" href="#">Home Care</a></li>
-                            <li class="mb-2"><a class="nav-link text-decoration-none" href="#">Corporate</a></li>
-                            <li class="mb-2"><a class="nav-link text-decoration-none" href="#">Blog</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-3">
-                        <h4 class="fw-semibold fs-5 mb-4">Contact</h4>
-                        <p class="d-flex align-items-center">
-                            <i class="material-icons me-2">email</i> mittal.sachendra891@gmail.com
-                        </p>
-                        <p class="mt-2 d-flex align-items-center">
-                            <i class="material-icons me-2">call</i> +91-8970227764
-                        </p>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h4 class="fw-semibold fs-5 mb-4">More Services</h4>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Home Care</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Corporate</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog">Blog</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h4 class="fw-semibold fs-5 mb-4">Contact</h4>
+                    <p class="d-flex align-items-center">
+                        <i class="material-icons me-2">email</i> mittal.sachendra891@gmail.com
+                    </p>
+                    <p class="mt-2 d-flex align-items-center">
+                        <i class="material-icons me-2">call</i> +91-8970227764
+                    </p>
+                    <div class="d-flex gap-1 gap-md-3">
+                        <a href="https://www.instagram.com/mittalsphysiofit/" target="_blank" class="text-white">
+                            <i class="fab fa-instagram fa-lg"></i>
+                        </a>
+                        <a href="https://www.facebook.com/mittal.sachendra891" target="_blank" class="text-white">
+                            <i class="fab fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="https://www.youtube.com/@MMC-Allmedicalsubjects" target="_blank" class="text-white">
+                            <i class="fab fa-youtube fa-lg"></i>
+                        </a>
                     </div>
                 </div>
             </div>
-            <div class="bg-gray-900 py-3">
-                <div class="container d-flex justify-content-between align-items-center small text-secondary">
-                    <p class="mb-0 text-white">© Copyright 2025 Mittal's Physiofit
-                        All right reserved.</p>
-                    <div class="d-flex gap-4">
-                        <p class="text-white">Design &amp; Development By <a
-                                href="https://www.linkedin.com/in/alok-goyal-034082127/">Alok
-                                Goyal</a></p>
-                    </div>
+        </div>
+        <div class="bg-gray-900 py-1">
+            <div class="container d-flex justify-content-between align-items-center small text-secondary">
+                <p class="mb-0 text-white">© Copyright 2025 Mittal's Physiofit
+                    All right reserved.</p>
+                <div class="d-flex gap-4">
+                    <p class="text-white">Design &amp; Development By <a
+                            href="https://www.linkedin.com/in/alok-goyal-034082127/">Alok
+                            Goyal</a></p>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
 
 
         <!-- Scripts -->
