--- a/bookappoitment.html
+++ b/bookappoitment.html
@@ -57,7 +57,7 @@
 </head>
 
 <body class="text-dark">
-        <header class="bg-white shadow-sm">
+   <header class="bg-white shadow-sm">
         <div style="background-color: #153C33;">
             <div class="container py-2">
                 <div class="d-flex justify-content-between align-items-center small text-white">
@@ -107,13 +107,14 @@
                             <li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#Services">Services</a>
+                                <a class="nav-link" href="index.html#Services">Services</a>
                             </li>
                             <li class="nav-item"><a href="gallery.html" class="nav-link">Gallery</a></li>
+                            <li class="nav-item"><a href="index.html#Blog" class="nav-link">Blog</a></li>
 
 
                             <li class="nav-item">
-                                <a class="nav-link" href="#Contact-us">Contact Us</a>
+                                <a class="nav-link" href="index.html#Contact-us">Contact Us</a>
                             </li>
 
                             <li class="nav-item dropdown">
@@ -122,18 +123,30 @@
                                     Download
                                 </a>
                                 <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
-                                    <li><a class="dropdown-item" target="_blank"
+                                    <li>
+                                        <a class="dropdown-item" target="_blank"
                                             href="https://drive.google.com/file/d/1bRkVtug0i-sa3-pBaxMUQ1kaseH0frIm/view">Back
-                                            Exercises</a></li>
-                                    <li><a class="dropdown-item" target="_blank"
-                                            href="https://drive.google.com/file/d/1OPLa2aA34frS29iF_K0gipodr90QXBYB/view">Neck
-                                            and Knee
-                                        </a></li>
+                                            Exercises</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" target="_blank"
+                                            href="https://drive.google.com/file/d/1sIbLBACU2V6O8OFlFiyEIR5uUG358jnc/view">Neck
+                                            Exercises
+
+                                        </a>
+                                    </li>
+                                     <li>
+                                        <a class="dropdown-item" target="_blank"
+                                            href="https://drive.google.com/file/d/1_cJpgXcXPz-uI14LogtJX-PeoLINMnXx/view">Knee
+                                            Exercises
+
+                                        </a>
+                                    </li>
                                 </ul>
                             </li>
 
                             <li class="nav-item position-relative">
-                                <a class="nav-link" href="#workshop">
+                                <a class="nav-link" href="index.html#workshop">
                                     Workshops
                                 </a>
                                 <!-- New badge above -->
@@ -270,7 +283,8 @@
         <a href="tel:+919610164989" class="call-icon" title="Call Now">
             <i class="fas fa-phone-alt"></i>
         </a>
-        <a href="https://api.whatsapp.com/send?phone=9189702 27764&text=Hello%20Mittal's%20Physiofit,%20I%20would%20like%20to%20book%20an%20appointment." target="_blank" class="whatsapp-icon" title="Message on WhatsApp">
+        <a href="https://api.whatsapp.com/send?phone=9189702 27764&text=Hello%20Mittal's%20Physiofit,%20I%20would%20like%20to%20book%20an%20appointment."
+            target="_blank" class="whatsapp-icon" title="Message on WhatsApp">
             <i class="fab fa-whatsapp"></i>
         </a>
     </div>
@@ -295,14 +309,16 @@
                         <li class="nav-item mt-2">
                             <a class="nav-link" href="index.html#Contact-us">Contact Us</a>
                         </li>
+
                     </ul>
                 </div>
                 <div class="col-md-3">
                     <h4 class="fw-semibold fs-5 mb-4">More Services</h4>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#">Home Care</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#">Corporate</a></li>
-                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#">Blog</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Home Care</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#HomeCare">Corporate</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#Blog">Blog</a></li>
+                        <li class="mb-2"><a class="nav-link text-decoration-none" href="#workshop">Upcoming Workshop</a></li>
                     </ul>
                 </div>
                 <div class="col-md-3">
@@ -313,10 +329,21 @@
                     <p class="mt-2 d-flex align-items-center">
                         <i class="material-icons me-2">call</i> +91-8970227764
                     </p>
+                    <div class="d-flex gap-1 gap-md-3">
+                        <a href="https://www.instagram.com/mittalsphysiofit/" target="_blank" class="text-white">
+                            <i class="fab fa-instagram fa-lg"></i>
+                        </a>
+                        <a href="https://www.facebook.com/mittal.sachendra891" target="_blank" class="text-white">
+                            <i class="fab fa-brands fa-facebook"></i>
+                        </a>
+                        <a href="https://www.youtube.com/@MMC-Allmedicalsubjects" target="_blank" class="text-white">
+                            <i class="fab fa-youtube fa-lg"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="bg-gray-900 py-3">
+        <div class="bg-gray-900 py-1">
             <div class="container d-flex justify-content-between align-items-center small text-secondary">
                 <p class="mb-0 text-white">© Copyright 2025 Mittal's Physiofit
                     All right reserved.</p>
